clang-ir/tests/snapshots/snapshot_fixtures__fixtures__ctype_libc_fixup.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures/ctype_libc_fixup.c" (c, x86_64-unknown-linux-gnu)
global next_lower.c : s32i = 97 [internal, default, align 4, dso_local]
global .str : s8i[16] = "%d %d %d %d %d\n" [cir_private, default, align 1, dso_local, constant]
global .str.1 : s8i[7] = "%d %d\n" [cir_private, default, align 1, dso_local, constant]

fn printf(%arg0: s8i*, ...) -> s32i [external, c];
fn toupper(%arg0: s32i) -> s32i [external, c, pure, nothrow];
fn tolower(%arg0: s32i) -> s32i [external, c, pure, nothrow];
fn next_lower() -> s32i [internal, c, no_inline, dso_local, nothrow] {
    %62 = alloca s32i, "__retval", align 4
    %63 = get_global @next_lower.c : s32i*
    %64 = load %63 : s32i, align 4
    %65 = inc %64 : s32i [nsw]
    store %65, %63, align 4
    store %64, %62
    %66 = load %62 : s32i
    return %66
}
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %0 = alloca s32i, "__retval", align 4
    %1 = alloca s32i, "upper", align 4
    %2 = alloca s32i, "lower", align 4
    %3 = alloca s32i, "digit", align 4
    %4 = alloca s32i, "punct", align 4
    %5 = alloca s32i, "eof", align 4
    %6 = const 0 : s32i
    store %6, %0
    %7 = const 81 : s32i
    store %7, %1, align 4
    %8 = const 113 : s32i
    store %8, %2, align 4
    %9 = const 53 : s32i
    store %9, %3, align 4
    %10 = const 33 : s32i
    store %10, %4, align 4
    %11 = const -1 : s32i
    store %11, %5, align 4
    %12 = get_global @printf : ((s8i*, ...) -> s32i)*
    %13 = get_global @.str : s8i[16]*
    %14 = cast(array_to_ptrdecay) %13 : s8i*
    %15 = get_global @toupper : ((s32i) -> s32i)*
    %16 = load %2 : s32i, align 4
    %17 = call @toupper(%16) : s32i [pure]
    %18 = get_global @toupper : ((s32i) -> s32i)*
    %19 = load %3 : s32i, align 4
    %20 = call @toupper(%19) : s32i [pure]
    %21 = get_global @toupper : ((s32i) -> s32i)*
    %22 = load %4 : s32i, align 4
    %23 = call @toupper(%22) : s32i [pure]
    %24 = get_global @toupper : ((s32i) -> s32i)*
    %25 = load %1 : s32i, align 4
    %26 = call @toupper(%25) : s32i [pure]
    %27 = get_global @toupper : ((s32i) -> s32i)*
    %28 = load %5 : s32i, align 4
    %29 = call @toupper(%28) : s32i [pure]
    %30 = call @printf(%14, %17, %20, %23, %26, %29) : s32i [all]
    %31 = get_global @printf : ((s8i*, ...) -> s32i)*
    %32 = get_global @.str : s8i[16]*
    %33 = cast(array_to_ptrdecay) %32 : s8i*
    %34 = get_global @tolower : ((s32i) -> s32i)*
    %35 = load %1 : s32i, align 4
    %36 = call @tolower(%35) : s32i [pure]
    %37 = get_global @tolower : ((s32i) -> s32i)*
    %38 = load %3 : s32i, align 4
    %39 = call @tolower(%38) : s32i [pure]
    %40 = get_global @tolower : ((s32i) -> s32i)*
    %41 = load %4 : s32i, align 4
    %42 = call @tolower(%41) : s32i [pure]
    %43 = get_global @tolower : ((s32i) -> s32i)*
    %44 = load %2 : s32i, align 4
    %45 = call @tolower(%44) : s32i [pure]
    %46 = get_global @tolower : ((s32i) -> s32i)*
    %47 = load %5 : s32i, align 4
    %48 = call @tolower(%47) : s32i [pure]
    %49 = call @printf(%33, %36, %39, %42, %45, %48) : s32i [all]
    %50 = get_global @printf : ((s8i*, ...) -> s32i)*
    %51 = get_global @.str.1 : s8i[7]*
    %52 = cast(array_to_ptrdecay) %51 : s8i*
    %53 = get_global @toupper : ((s32i) -> s32i)*
    %54 = call @next_lower() : s32i [all]
    %55 = call @toupper(%54) : s32i [pure]
    %56 = get_global @tolower : ((s32i) -> s32i)*
    %57 = call @next_lower() : s32i [all]
    %58 = call @tolower(%57) : s32i [pure]
    %59 = call @printf(%52, %55, %58) : s32i [all]
    %60 = const 0 : s32i
    store %60, %0
    %61 = load %0 : s32i
    return %61
}
