clang-ir/tests/snapshots/snapshot_fixtures__fixtures__deep_ast.snap
---
source: clang-ir/tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures/deep_ast.c" (c, x86_64-unknown-linux-gnu)
global .str : s8i[4] = ConstArray { ty: Array { element_type: Named("s8i"), size: 4 }, elts: Str("%d\n"), trailing_zeros_num: 1 } [cir_private, default, align 1, dso_local, constant]

fn printf(%arg0: s8i*, ...) -> s32i [external, c];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
        %0 = alloca s32i, "__retval", align 4
        %1 = const 0 : s32i
        store %1, %0
        %2 = get_global @printf : (s8i*, ...) -> s32i*
        %3 = get_global @.str : s8i[4]*
        %4 = cast(array_to_ptrdecay) %3 : s8i*
        %5 = const 0 : s32i
        %6 = const 1 : s32i
        %7 = add %5, %6 : s32i [nsw]
        %8 = const 1 : s32i
        %9 = add %7, %8 : s32i [nsw]
        %10 = const 1 : s32i
        %11 = add %9, %10 : s32i [nsw]
        %12 = const 1 : s32i
        %13 = add %11, %12 : s32i [nsw]
        %14 = const 1 : s32i
        %15 = add %13, %14 : s32i [nsw]
        %16 = const 1 : s32i
        %17 = add %15, %16 : s32i [nsw]
        %18 = const 1 : s32i
        %19 = add %17, %18 : s32i [nsw]
        %20 = const 1 : s32i
        %21 = add %19, %20 : s32i [nsw]
        %22 = const 1 : s32i
        %23 = add %21, %22 : s32i [nsw]
        %24 = const 1 : s32i
        %25 = add %23, %24 : s32i [nsw]
        %26 = const 1 : s32i
        %27 = add %25, %26 : s32i [nsw]
        %28 = const 1 : s32i
        %29 = add %27, %28 : s32i [nsw]
        %30 = const 1 : s32i
        %31 = add %29, %30 : s32i [nsw]
        %32 = const 1 : s32i
        %33 = add %31, %32 : s32i [nsw]
        %34 = const 1 : s32i
        %35 = add %33, %34 : s32i [nsw]
        %36 = const 1 : s32i
        %37 = add %35, %36 : s32i [nsw]
        %38 = const 1 : s32i
        %39 = add %37, %38 : s32i [nsw]
        %40 = const 1 : s32i
        %41 = add %39, %40 : s32i [nsw]
        %42 = const 1 : s32i
        %43 = add %41, %42 : s32i [nsw]
        %44 = const 1 : s32i
        %45 = add %43, %44 : s32i [nsw]
        %46 = const 1 : s32i
        %47 = add %45, %46 : s32i [nsw]
        %48 = const 1 : s32i
        %49 = add %47, %48 : s32i [nsw]
        %50 = const 1 : s32i
        %51 = add %49, %50 : s32i [nsw]
        %52 = const 1 : s32i
        %53 = add %51, %52 : s32i [nsw]
        %54 = const 1 : s32i
        %55 = add %53, %54 : s32i [nsw]
        %56 = const 1 : s32i
        %57 = add %55, %56 : s32i [nsw]
        %58 = const 1 : s32i
        %59 = add %57, %58 : s32i [nsw]
        %60 = const 1 : s32i
        %61 = add %59, %60 : s32i [nsw]
        %62 = const 1 : s32i
        %63 = add %61, %62 : s32i [nsw]
        %64 = const 1 : s32i
        %65 = add %63, %64 : s32i [nsw]
        %66 = const 1 : s32i
        %67 = add %65, %66 : s32i [nsw]
        %68 = const 1 : s32i
        %69 = add %67, %68 : s32i [nsw]
        %70 = const 1 : s32i
        %71 = add %69, %70 : s32i [nsw]
        %72 = const 1 : s32i
        %73 = add %71, %72 : s32i [nsw]
        %74 = const 1 : s32i
        %75 = add %73, %74 : s32i [nsw]
        %76 = const 1 : s32i
        %77 = add %75, %76 : s32i [nsw]
        %78 = const 1 : s32i
        %79 = add %77, %78 : s32i [nsw]
        %80 = const 1 : s32i
        %81 = add %79, %80 : s32i [nsw]
        %82 = const 1 : s32i
        %83 = add %81, %82 : s32i [nsw]
        %84 = const 1 : s32i
        %85 = add %83, %84 : s32i [nsw]
        %86 = const 1 : s32i
        %87 = add %85, %86 : s32i [nsw]
        %88 = const 1 : s32i
        %89 = add %87, %88 : s32i [nsw]
        %90 = const 1 : s32i
        %91 = add %89, %90 : s32i [nsw]
        %92 = const 1 : s32i
        %93 = add %91, %92 : s32i [nsw]
        %94 = const 1 : s32i
        %95 = add %93, %94 : s32i [nsw]
        %96 = const 1 : s32i
        %97 = add %95, %96 : s32i [nsw]
        %98 = const 1 : s32i
        %99 = add %97, %98 : s32i [nsw]
        %100 = const 1 : s32i
        %101 = add %99, %100 : s32i [nsw]
        %102 = const 1 : s32i
        %103 = add %101, %102 : s32i [nsw]
        %104 = const 1 : s32i
        %105 = add %103, %104 : s32i [nsw]
        %106 = const 1 : s32i
        %107 = add %105, %106 : s32i [nsw]
        %108 = const 1 : s32i
        %109 = add %107, %108 : s32i [nsw]
        %110 = const 1 : s32i
        %111 = add %109, %110 : s32i [nsw]
        %112 = const 1 : s32i
        %113 = add %111, %112 : s32i [nsw]
        %114 = const 1 : s32i
        %115 = add %113, %114 : s32i [nsw]
        %116 = const 1 : s32i
        %117 = add %115, %116 : s32i [nsw]
        %118 = const 1 : s32i
        %119 = add %117, %118 : s32i [nsw]
        %120 = const 1 : s32i
        %121 = add %119, %120 : s32i [nsw]
        %122 = const 1 : s32i
        %123 = add %121, %122 : s32i [nsw]
        %124 = const 1 : s32i
        %125 = add %123, %124 : s32i [nsw]
        %126 = const 1 : s32i
        %127 = add %125, %126 : s32i [nsw]
        %128 = const 1 : s32i
        %129 = add %127, %128 : s32i [nsw]
        %130 = const 1 : s32i
        %131 = add %129, %130 : s32i [nsw]
        %132 = const 1 : s32i
        %133 = add %131, %132 : s32i [nsw]
        %134 = const 1 : s32i
        %135 = add %133, %134 : s32i [nsw]
        %136 = const 1 : s32i
        %137 = add %135, %136 : s32i [nsw]
        %138 = const 1 : s32i
        %139 = add %137, %138 : s32i [nsw]
        %140 = const 1 : s32i
        %141 = add %139, %140 : s32i [nsw]
        %142 = const 1 : s32i
        %143 = add %141, %142 : s32i [nsw]
        %144 = const 1 : s32i
        %145 = add %143, %144 : s32i [nsw]
        %146 = const 1 : s32i
        %147 = add %145, %146 : s32i [nsw]
        %148 = const 1 : s32i
        %149 = add %147, %148 : s32i [nsw]
        %150 = const 1 : s32i
        %151 = add %149, %150 : s32i [nsw]
        %152 = const 1 : s32i
        %153 = add %151, %152 : s32i [nsw]
        %154 = const 1 : s32i
        %155 = add %153, %154 : s32i [nsw]
        %156 = const 1 : s32i
        %157 = add %155, %156 : s32i [nsw]
        %158 = const 1 : s32i
        %159 = add %157, %158 : s32i [nsw]
        %160 = const 1 : s32i
        %161 = add %159, %160 : s32i [nsw]
        %162 = const 1 : s32i
        %163 = add %161, %162 : s32i [nsw]
        %164 = const 1 : s32i
        %165 = add %163, %164 : s32i [nsw]
        %166 = const 1 : s32i
        %167 = add %165, %166 : s32i [nsw]
        %168 = const 1 : s32i
        %169 = add %167, %168 : s32i [nsw]
        %170 = const 1 : s32i
        %171 = add %169, %170 : s32i [nsw]
        %172 = const 1 : s32i
        %173 = add %171, %172 : s32i [nsw]
        %174 = const 1 : s32i
        %175 = add %173, %174 : s32i [nsw]
        %176 = const 1 : s32i
        %177 = add %175, %176 : s32i [nsw]
        %178 = const 1 : s32i
        %179 = add %177, %178 : s32i [nsw]
        %180 = const 1 : s32i
        %181 = add %179, %180 : s32i [nsw]
        %182 = const 1 : s32i
        %183 = add %181, %182 : s32i [nsw]
        %184 = const 1 : s32i
        %185 = add %183, %184 : s32i [nsw]
        %186 = const 1 : s32i
        %187 = add %185, %186 : s32i [nsw]
        %188 = const 1 : s32i
        %189 = add %187, %188 : s32i [nsw]
        %190 = const 1 : s32i
        %191 = add %189, %190 : s32i [nsw]
        %192 = const 1 : s32i
        %193 = add %191, %192 : s32i [nsw]
        %194 = const 1 : s32i
        %195 = add %193, %194 : s32i [nsw]
        %196 = const 1 : s32i
        %197 = add %195, %196 : s32i [nsw]
        %198 = const 1 : s32i
        %199 = add %197, %198 : s32i [nsw]
        %200 = const 1 : s32i
        %201 = add %199, %200 : s32i [nsw]
        %202 = const 1 : s32i
        %203 = add %201, %202 : s32i [nsw]
        %204 = const 1 : s32i
        %205 = add %203, %204 : s32i [nsw]
        %206 = const 1 : s32i
        %207 = add %205, %206 : s32i [nsw]
        %208 = const 1 : s32i
        %209 = add %207, %208 : s32i [nsw]
        %210 = const 1 : s32i
        %211 = add %209, %210 : s32i [nsw]
        %212 = const 1 : s32i
        %213 = add %211, %212 : s32i [nsw]
        %214 = const 1 : s32i
        %215 = add %213, %214 : s32i [nsw]
        %216 = const 1 : s32i
        %217 = add %215, %216 : s32i [nsw]
        %218 = const 1 : s32i
        %219 = add %217, %218 : s32i [nsw]
        %220 = const 1 : s32i
        %221 = add %219, %220 : s32i [nsw]
        %222 = const 1 : s32i
        %223 = add %221, %222 : s32i [nsw]
        %224 = const 1 : s32i
        %225 = add %223, %224 : s32i [nsw]
        %226 = const 1 : s32i
        %227 = add %225, %226 : s32i [nsw]
        %228 = const 1 : s32i
        %229 = add %227, %228 : s32i [nsw]
        %230 = const 1 : s32i
        %231 = add %229, %230 : s32i [nsw]
        %232 = const 1 : s32i
        %233 = add %231, %232 : s32i [nsw]
        %234 = const 1 : s32i
        %235 = add %233, %234 : s32i [nsw]
        %236 = const 1 : s32i
        %237 = add %235, %236 : s32i [nsw]
        %238 = const 1 : s32i
        %239 = add %237, %238 : s32i [nsw]
        %240 = const 1 : s32i
        %241 = add %239, %240 : s32i [nsw]
        %242 = const 1 : s32i
        %243 = add %241, %242 : s32i [nsw]
        %244 = const 1 : s32i
        %245 = add %243, %244 : s32i [nsw]
        %246 = const 1 : s32i
        %247 = add %245, %246 : s32i [nsw]
        %248 = const 1 : s32i
        %249 = add %247, %248 : s32i [nsw]
        %250 = const 1 : s32i
        %251 = add %249, %250 : s32i [nsw]
        %252 = const 1 : s32i
        %253 = add %251, %252 : s32i [nsw]
        %254 = const 1 : s32i
        %255 = add %253, %254 : s32i [nsw]
        %256 = const 1 : s32i
        %257 = add %255, %256 : s32i [nsw]
        %258 = const 1 : s32i
        %259 = add %257, %258 : s32i [nsw]
        %260 = const 1 : s32i
        %261 = add %259, %260 : s32i [nsw]
        %262 = call @printf(%4, %261) : s32i [all]
        %263 = const 0 : s32i
        store %263, %0
        %264 = load %0 : s32i
        return %264
}
